--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
 }
 
 code {
@@ -21,4 +22,12 @@ ul {
 
 li {
   margin-bottom: 5px;
+  font-size: 1.3em;
+  font-style: italic;
+  font-weight: 600;
+}
+
+h2 {
+  text-transform: uppercase;
+  font-style: italic;
 }
